--- a/templates/default/dnssec_edit_key.html
+++ b/templates/default/dnssec_edit_key.html
@@ -46,7 +46,7 @@
 {% trans %}Tag{% endtrans %}: {{ key_info[2] }}<br>
 {% trans %}Algorithm{% endtrans %}: {{ algorithms[key_info[3]] }}<br>
 {% trans %}Bits{% endtrans %}: {{ key_info[4] }}<br>
-{% trans %}Active{% endtrans %}: {{ active|trans }}<br>
+{% trans %}Active{% endtrans %}: {% trans %}{{ active }}{% endtrans %}<br>
 <p class="pt-3"><strong>{% trans %}Are you sure?{% endtrans %}</strong></p>
 <input class="btn btn-primary btn-sm" type="button"
        onClick="location.href='index.php?page=dnssec_edit_key&id={{ zone_id }}&key_id={{ key_id }}&confirm=1'"
