--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -293,7 +293,7 @@
             {% if iface_record_comments %}
             <td>{{ r['comment'] ?? '-' }}</td>
             {% endif %}
-            <td class="text-center">{{ r['disabled'] ? 'Yes'|trans : 'No'|trans }}</td>
+            <td class="text-center">{% if r['disabled'] %}{% trans %}Yes{% endtrans %}{% else %}{% trans %}No{% endtrans %}{% endif %}</td>
             {% else %}
             <td class="col-sm-2"><input class="form-control form-control-sm" type="text"
                                         name="record[{{ r['id'] }}][name]" value="{{ r['name'] }}"></td>
